Next release
============

- Bug fix: when a ``repoze.bfg.resource.PackageOverrides`` class was
  instantiated, and the package it was overriding already had a
  ``__loader__`` attribute, it would fail at startup time, even if the
  ``__loader__`` attribute was another PackageOverrides instance.  We
  now replace any ``__loader__`` that is also a PackageOverrides
  instance.  Symptom: ``ConfigurationExecutionError: <type
  'exceptions.TypeError'>: Package <module 'karl.views' from
  '/Users/chrism/projects/osi/bfgenv/src/karl/karl/views/__init__.pyc'>
  already has a __loader__ (probably a module in a zipped egg)``.

1.0a7 (2009-06-30)
==================

- Add a ``reload_resources`` configuration file setting (aka the
  ``BFG_RELOAD_RESOURCES`` environment variable).  When this is set to
  true, the server never needs to be restarted when moving files
  between directory resource overrides (esp. for templates currently).

- Add a ``reload_all`` configuration file setting (aka the
  ``BFG_RELOAD_ALL`` environment variable) that implies both
  ``reload_resources`` and ``reload_templates``.

- The ``static`` helper view class now uses a ``PackageURLParser`` in
  order to allow for the overriding of static resources (CSS / logo
  files, etc) using the ``resource`` ZCML directive.  The
  ``PackageURLParser`` class was added to a (new) ``static`` module in
  BFG; it is a subclass of the ``StaticURLParser`` class in
  ``paste.urlparser``.

- The ``repoze.bfg.templating.renderer_from_cache`` function now
  checks for the ``reload_resources`` setting; if it's true, it does
  not register a template renderer (it won't use the registry as a
  template renderer cache).

- Add ``pkg_resources`` to the glossary.

- Update the "Environment" docs to note the existence of
  ``reload_resources`` and ``reload_all``.

- Use a colon instead of a tab as the separator between package name
  and relpath to form the "spec" when register a ITemplateRenderer.
